# phosphor-u-boot-env-mgr

./: meson.build  meson.options  meson_options.txt  xyz.openbmc_project.U_Boot.Environment.DevTreeDaemon.service
_recipes/: phosphor-u-boot-env-mgr.bb  phosphor-u-boot-env-mgr_git.bb
_recipes/gsc/: packagegroup-hpe-apps.bb
_recipes/gxp/: packagegroup-hpe-apps.bb
include/: devtree-nodesd.hpp  devtree_daemon.hpp  devtree_deviced.hpp  machinecontextd.hpp  meson.build
service_files/: meson.build  xyz.openbmc_project.DeviceTree.VPD.Parser.service
services/: meson.build  xyz.openbmc_project.U_Boot.Environment.DevTreeDaemon.service
src/: devtree-nodesd.cpp  devtree_daemon.cpp  devtree_deviced.cpp  dt-vpd-parsed.cpp  machinecontext.cpp  machinecontext.hpp  machinecontextd.cpp  machinecontextd.hpp  meson.build
