SRC_FILES = ['mainapp.cpp', 'u-boot-env-mgr.cpp']
executable('phosphor-u-boot-env-mgr', sources : SRC_FILES, include_directories : incdir, dependencies : default_deps, install: true)

dSRC_FILES = ['devtree_daemon.cpp']
executable('phosphor-u-boot-env-devtree-daemon', sources : dSRC_FILES, include_directories : incdir, dependencies : default_deps, install: true)