SRC_FILES = ['mainapp.cpp', 'u-boot-env-mgr.cpp']
executable('phosphor-u-boot-env-mgr', sources : SRC_FILES, include_directories : incdir, dependencies : default_deps, install: true)

dSRC_FILES = ['devtree-nodesd.cpp']
executable('phosphor-u-boot-env-devtree-nodesd', sources : dSRC_FILES, include_directories : incdir, dependencies : default_deps, install: true)